# porcus

./: .gitignore  Cargo.toml  README.md
src/: case.rs  char_type.rs  classify_char.rs  latin.rs  lib.rs  main.rs  pig_latin.rs
