[package]
name = "porcus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10.0", features = ["macros"] }
unicode-normalization = "0.1.19"
unicode-script = "0.5.4"
unicode-segmentation = "1.8.0"
