[package]
name = "porcus"
version = "0.1.0"
edition = "2021"
description = "Pig latin for the whole Latin script."
readme = "README.md"
repository = "https://github.com/LeopoldTal/porcus/"
license = "MIT"
keywords = ["piglatin", "pig-latin"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
phf = { version = "0.10.0", features = ["macros"] }
unicode-normalization = "0.1.19"
unicode-script = "0.5.4"
unicode-segmentation = "1.8.0"
